--- a/docreview_lf.ipynb
+++ b/docreview_lf.ipynb
@@ -1845,7 +1845,7 @@
     "                            print(\"# -- delete image\")\n",
     "                            delete_image_ok = app_dlg.descendants(title=\"Yes\", control_type=\"Button\")\n",
     "                            delete_image_ok[0].click()\n",
-    "                            pass\n",
+    "                            continue\n",
     "                else:\n",
     "                    if(low_label == 'RC2' and up_label=='RC2'):\n",
     "                        trees[i].select()\n",
@@ -1859,7 +1859,7 @@
     "                            print(\"# -- delete image\")\n",
     "                            delete_image_ok = app_dlg.descendants(title=\"Yes\", control_type=\"Button\")\n",
     "                            delete_image_ok[0].click()\n",
-    "                            pass\n",
+    "                            continue\n",
     "\n",
     "\n",
     "\n",
