--- a/docreview_lf.ipynb
+++ b/docreview_lf.ipynb
@@ -1759,44 +1759,8 @@
     "\n",
     "            print('# -- image_ke_{} wrong classified as : RC2'.format(i+1))\n",
     "            \n",
-    "            trees[i].select()\n",
-    "            trees[i].ensure_visible()\n",
-    "            trees[i].click_input()\n",
-    "\n",
-    "            combobox = trees[i].children()[0].children(class_name = 'ComboBox')\n",
-    "\n",
-    "            # check combobox is visible\n",
-    "            trees[i].select()\n",
-    "            image_0 = trees[i].children()[0].children(class_name='ListBox')[0].children()[0]\n",
-    "            image_0.select()\n",
-    "            image_0.click_input()\n",
-    "\n",
-    "            if(not combobox[0].children()[0].is_visible()):\n",
-    "                combobox[0].click_input()\n",
-    "\n",
-    "            # expand combobox\n",
-    "            combobox[0].children()[0].type_keys(\"%{DOWN}\")\n",
-    "            combobox[0].expand()\n",
-    "            sleep(1)\n",
-    "\n",
-    "            print('# -- image_ke_{} re - classified as : BLOKI'.format(i+1))\n",
-    "            # update pages dict\n",
-    "            pages.update({i:\"BLOKI\"})\n",
-    "\n",
-    "            try:\n",
-    "                list_items = combobox[0].children(control_type=\"ListItem\")\n",
-    "                if(list_items[0].window_text()=='BLOKI'):\n",
-    "                    list_items[0].select()\n",
-    "                else:\n",
-    "                    list_items[0].select()\n",
-    "            except :\n",
-    "                break\n",
-    "\n",
-    "            try:\n",
-    "                print('# -- enter 1')\n",
-    "                app_dlg.type_keys(\"{ENTER}\")\n",
-    "            except:\n",
-    "                print('break here 1')\n",
+    "            print('# -- do classification by neighborhood')\n",
+    "            classification_neighborhood(trees=trees, i=i, app_dlg=app_dlg)\n",
     "                \n",
     "\n",
     "            sleep(1)\n",
@@ -9756,7 +9720,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.3"
+   "version": "3.8.9"
   },
   "vscode": {
    "interpreter": {
