--- a/docreview_lf.ipynb
+++ b/docreview_lf.ipynb
@@ -1759,6 +1759,10 @@
     "\n",
     "            print('# -- image_ke_{} wrong classified as : RC2'.format(i+1))\n",
     "            \n",
+    "            trees[i].select()\n",
+    "            trees[i].ensure_visible()\n",
+    "            trees[i].click_input()\n",
+    "\n",
     "            print('# -- do classification by neighborhood')\n",
     "            classification_neighborhood(trees=trees, i=i, app_dlg=app_dlg)\n",
     "                \n",
