--- a/docreview_lf.ipynb
+++ b/docreview_lf.ipynb
@@ -1758,24 +1758,41 @@
     "        if (label == 'RC2' and i != 0):\n",
     "\n",
     "            print('# -- image_ke_{} wrong classified as : RC2'.format(i+1))\n",
+    "\n",
+    "            error_images = len(trees[i].children()[0].children(class_name='ListBox')[0].children())>0\n",
+    "            if(error_images):\n",
+    "                print('# -- do classification by neighborhood')\n",
+    "                classification_neighborhood(trees=trees, i=i, app_dlg=app_dlg)\n",
+    "                    \n",
+    "\n",
+    "                sleep(1)\n",
+    "                print('# check warning batch complete')\n",
+    "                complete_dlg = app_dlg.descendants(title=\"All problems in the batch have been fixed. Close batch?\")\n",
+    "                if(len(complete_dlg)>0):\n",
+    "                    # close batch\n",
+    "                    print('# -- cancel batch complete')\n",
+    "                    warning_close_batch_ok = app_dlg.descendants(title=\"Cancel\", control_type=\"Button\")\n",
+    "                    print(warning_close_batch_ok[0].window_text())\n",
+    "                    warning_close_batch_ok[0].click()\n",
+    "            else:\n",
     "            \n",
-    "            trees[i].select()\n",
-    "            trees[i].ensure_visible()\n",
-    "            trees[i].click_input()\n",
+    "                trees[i].select()\n",
+    "                trees[i].ensure_visible()\n",
+    "                trees[i].click_input()\n",
     "\n",
-    "            print('# -- do classification by neighborhood')\n",
-    "            classification_neighborhood(trees=trees, i=i, app_dlg=app_dlg)\n",
-    "                \n",
+    "                print('# -- do classification by neighborhood')\n",
+    "                classification_neighborhood(trees=trees, i=i, app_dlg=app_dlg)\n",
+    "                    \n",
     "\n",
-    "            sleep(1)\n",
-    "            print('# check warning batch complete')\n",
-    "            complete_dlg = app_dlg.descendants(title=\"All problems in the batch have been fixed. Close batch?\")\n",
-    "            if(len(complete_dlg)>0):\n",
-    "                # close batch\n",
-    "                print('# -- cancel batch complete')\n",
-    "                warning_close_batch_ok = app_dlg.descendants(title=\"Cancel\", control_type=\"Button\")\n",
-    "                print(warning_close_batch_ok[0].window_text())\n",
-    "                warning_close_batch_ok[0].click()\n",
+    "                sleep(1)\n",
+    "                print('# check warning batch complete')\n",
+    "                complete_dlg = app_dlg.descendants(title=\"All problems in the batch have been fixed. Close batch?\")\n",
+    "                if(len(complete_dlg)>0):\n",
+    "                    # close batch\n",
+    "                    print('# -- cancel batch complete')\n",
+    "                    warning_close_batch_ok = app_dlg.descendants(title=\"Cancel\", control_type=\"Button\")\n",
+    "                    print(warning_close_batch_ok[0].window_text())\n",
+    "                    warning_close_batch_ok[0].click()\n",
     "    \n",
     "        error_images = len(trees[i].children()[0].children(class_name='ListBox')[0].children())>0\n",
     "        if(error_images):\n",
