--- a/docreview_lf.ipynb
+++ b/docreview_lf.ipynb
@@ -1860,7 +1860,7 @@
     "            if(len(complete_dlg)>0):\n",
     "                # close batch\n",
     "                print('# -- batch complete (close)')\n",
-    "                warning_close_batch_ok = app_dlg.descendants(title=\"OK\", control_type=\"Button\")\n",
+    "                warning_close_batch_ok = app_dlg.descendants(title=\"Cancel\", control_type=\"Button\")\n",
     "                warning_close_batch_ok[0].click()\n",
     "        \n",
     "\n",
