--- a/docreview_lf.ipynb
+++ b/docreview_lf.ipynb
@@ -551,7 +551,7 @@
     "        return new_class_index\n",
     "    else:\n",
     "        if(up_label==\"BLOKIII\"):\n",
-    "            new_class_index = index_class_low+1\n",
+    "            new_class_index = 1\n",
     "            return new_class_index\n",
     "\n",
     "\n",
