--- a/correction_lf.ipynb
+++ b/correction_lf.ipynb
@@ -49,7 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# JANGAN DITUN DULU (INI PILIHAN TERAKHIR)"
+    "# JANGAN DIRUN DULU (INI PILIHAN TERAKHIR)"
    ]
   },
   {
