--- a/validation_lf.ipynb
+++ b/validation_lf.ipynb
@@ -32,6 +32,8 @@
     "        invalid_fields = int(app_dlg.child_window(auto_id='lblFieldStatus').window_text().split(' ')[3])\n",
     "        if(invalid_fields==0):\n",
     "            app_dlg.type_keys(\"{ENTER}\")\n",
+    "\n",
+    "            save_dlg = app_dlg.descendants(title=\"Do you want to save the current document?\")\n",
     "            if(len(save_dlg)>0):\n",
     "                # suspend batch\n",
     "                doc_ke+=1\n",
@@ -43,8 +45,8 @@
     "        for i in range(0, invalid_fields):\n",
     "            print('---- force fields ke: {}'.format(i+1))\n",
     "            app_dlg.type_keys(\"^{ENTER}\")\n",
+    "            \n",
     "            force_dlg = app_dlg.descendants(title=\"Do you really want to force this field valid?\")\n",
-    "\n",
     "            if(len(force_dlg)>0):\n",
     "                # suspend batch\n",
     "                print(\"# -- force field\")\n",
@@ -52,7 +54,6 @@
     "                force_doc_yes[0].click()\n",
     "\n",
     "        save_dlg = app_dlg.descendants(title=\"Do you want to save the current document?\")\n",
-    "\n",
     "        if(len(save_dlg)>0):\n",
     "            # suspend batch\n",
     "            doc_ke+=1\n",
@@ -78,7 +79,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "batch_done = 0\n",
+    "while(batch_done<30):\n",
+    "    try:\n",
+    "        print('batch: {}'.format(batch_done+1))\n",
+    "        force_valid()\n",
+    "        batch_done+=1\n",
+    "    except:\n",
+    "        pass"
+   ]
   }
  ],
  "metadata": {
