--- a/validation_lf.ipynb
+++ b/validation_lf.ipynb
@@ -29,10 +29,34 @@
     "    \n",
     "    while(doc_ke<(invalid_docs)):\n",
     "        print('# doc ke: {}'.format(doc_ke+1))\n",
+    "        unclass_doc = app_dlg.Pane.children()[0].children()[0].children()[0].children(title='Document is unclassified, please select a class first.')\n",
+    "        if(len(unclass_doc)>0):\n",
+    "            print('reclassify')\n",
+    "            combo = app_dlg.child_window(auto_id=\"PanelClassCombo\")\n",
+    "            combo.children()[0].type_keys(\"%{DOWN}\")\n",
+    "            combo.children()[0].expand()\n",
+    "            combo.children()[0].children()[0].children()[10].select().type_keys('{ENTER}')\n",
+    "            reclass_dlg_yes = app_dlg.descendants(title='Yes', control_type=\"Button\")\n",
+    "            reclass_dlg_yes[0].click()\n",
+    "\n",
+    "            app = Application(backend='uia').connect(best_match='Kofax Transformation Modules - Validation')\n",
+    "            app_dlg = app.window(best_match='Kofax Transformation Modules - Validation')\n",
+    "\n",
+    "            save_dlg = app_dlg.descendants(title=\"Do you want to save the current document?\")\n",
+    "            print(save_dlg)\n",
+    "            if(len(save_dlg)>0):\n",
+    "                # suspend batch\n",
+    "                doc_ke+=1\n",
+    "                print(\"# -- save doc\")\n",
+    "                save_doc_yes = app_dlg.descendants(title=\"Yes\", control_type=\"Button\")\n",
+    "                save_doc_yes[0].click()\n",
+    "                continue\n",
+    "\n",
+    "            \n",
+    "\n",
     "        invalid_fields = int(app_dlg.child_window(auto_id='lblFieldStatus').window_text().split(' ')[3])\n",
     "        if(invalid_fields==0):\n",
     "            app_dlg.type_keys(\"{ENTER}\")\n",
-    "\n",
     "            save_dlg = app_dlg.descendants(title=\"Do you want to save the current document?\")\n",
     "            if(len(save_dlg)>0):\n",
     "                # suspend batch\n",
@@ -42,16 +66,10 @@
     "                save_doc_yes[0].click()\n",
     "                continue\n",
     "\n",
-    "        for i in range(0, invalid_fields):\n",
-    "            print('---- force fields ke: {}'.format(i+1))\n",
-    "            app_dlg.type_keys(\"^{ENTER}\")\n",
-    "            \n",
-    "            force_dlg = app_dlg.descendants(title=\"Do you really want to force this field valid?\")\n",
-    "            if(len(force_dlg)>0):\n",
-    "                # suspend batch\n",
-    "                print(\"# -- force field\")\n",
-    "                force_doc_yes = app_dlg.descendants(title=\"Yes\", control_type=\"Button\")\n",
-    "                force_doc_yes[0].click()\n",
+    "        else:\n",
+    "            app_dlg.type_keys('^+F')\n",
+    "            force_all_yes = app_dlg.descendants(title='Yes', control_type=\"Button\")\n",
+    "            force_all_yes[0].click()\n",
     "\n",
     "        save_dlg = app_dlg.descendants(title=\"Do you want to save the current document?\")\n",
     "        if(len(save_dlg)>0):\n",
@@ -80,8 +98,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 16OP\n",
+    "# BATCH\n",
+    "\n",
+    "jml_batch = 1\n",
     "batch_done = 0\n",
-    "while(batch_done<30):\n",
+    "while(batch_done<jml_batch):\n",
     "    try:\n",
     "        print('batch: {}'.format(batch_done+1))\n",
     "        force_valid()\n",
