--- a/validation_lf.ipynb
+++ b/validation_lf.ipynb
@@ -29,6 +29,8 @@
     "    \n",
     "    while(doc_ke<(invalid_docs)):\n",
     "        print('# doc ke: {}'.format(doc_ke+1))\n",
+    "\n",
+    "        # check unclassified doc\n",
     "        unclass_doc = app_dlg.Pane.children()[0].children()[0].children()[0].children(title='Document is unclassified, please select a class first.')\n",
     "        if(len(unclass_doc)>0):\n",
     "            print('reclassify')\n",
@@ -53,7 +55,7 @@
     "                continue\n",
     "\n",
     "            \n",
-    "\n",
+    "        # check invalid fields\n",
     "        invalid_fields = int(app_dlg.child_window(auto_id='lblFieldStatus').window_text().split(' ')[3])\n",
     "        if(invalid_fields==0):\n",
     "            app_dlg.type_keys(\"{ENTER}\")\n",
@@ -65,8 +67,8 @@
     "                save_doc_yes = app_dlg.descendants(title=\"Yes\", control_type=\"Button\")\n",
     "                save_doc_yes[0].click()\n",
     "                continue\n",
-    "\n",
     "        else:\n",
+    "            # force all fields can custom setting keyboard\n",
     "            app_dlg.type_keys('^+F')\n",
     "            force_all_yes = app_dlg.descendants(title='Yes', control_type=\"Button\")\n",
     "            force_all_yes[0].click()\n",
