--- a/validation_lf.ipynb
+++ b/validation_lf.ipynb
@@ -61,7 +61,7 @@
     "            app_dlg.type_keys(\"{ENTER}\")\n",
     "            save_dlg = app_dlg.descendants(title=\"Do you want to save the current document?\")\n",
     "            if(len(save_dlg)>0):\n",
-    "                # suspend batch\n",
+    "                # save batch\n",
     "                doc_ke+=1\n",
     "                print(\"# -- save doc\")\n",
     "                save_doc_yes = app_dlg.descendants(title=\"Yes\", control_type=\"Button\")\n",
@@ -75,7 +75,7 @@
     "\n",
     "        save_dlg = app_dlg.descendants(title=\"Do you want to save the current document?\")\n",
     "        if(len(save_dlg)>0):\n",
-    "            # suspend batch\n",
+    "            # save batch\n",
     "            doc_ke+=1\n",
     "            print(\"# -- save doc\")\n",
     "            save_doc_yes = app_dlg.descendants(title=\"Yes\", control_type=\"Button\")\n",
