--- a/validation_lf.ipynb
+++ b/validation_lf.ipynb
@@ -69,7 +69,7 @@
     "                continue\n",
     "        else:\n",
     "            # force all fields can custom setting keyboard\n",
-    "            app_dlg.type_keys('^+F')\n",
+    "            app_dlg.type_keys('^+V')\n",
     "            force_all_yes = app_dlg.descendants(title='Yes', control_type=\"Button\")\n",
     "            force_all_yes[0].click()\n",
     "\n",
