--- a/validation_lf.ipynb
+++ b/validation_lf.ipynb
@@ -24,7 +24,7 @@
     "    app = Application(backend='uia').connect(best_match='Kofax Transformation Modules - Validation')\n",
     "    app_dlg = app.window(best_match='Kofax Transformation Modules - Validation')\n",
     "\n",
-    "    invalid_docs = int(app_dlg.StatusBar.children()[-1].window_text().replace(' ', '').split(':')[-1])\n",
+    "    invalid_docs = int(app_dlg.StatusBar.children()[7].window_text().replace(' ', '').split(':')[-1])\n",
     "    doc_ke = 0\n",
     "    \n",
     "    while(doc_ke<(invalid_docs)):\n",
@@ -92,6 +92,17 @@
    "metadata": {},
    "source": [
     "# JANGAN DIRUN DULU (INI PILIHAN TERAKHIR)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "setting keyboard shortcut untuk force all fields terlebih dahulu dengan (Ctrl+Shift+V)\n",
+    "<br>\n",
+    "caranya:\n",
+    "<br>\n",
+    "klik kanan di toolbar -> customize -> command -> keyboard -> fields -> pilih force all fields -> pilih Ctrl+Shift+V"
    ]
   },
   {
